nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "192-168-0-105.xip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-service-service-development
                port:
                  number: 3000
          - path: /go
            pathType: Prefix
            backend:
              service:
                name: go-service-service-development
                port:
                  number: 8080
